de work1-2 arreglado

--- a/templates/work.html
+++ b/templates/work.html
@@ -96,7 +96,7 @@
         <blockquote>
           <p>Código usado:</p>
         </blockquote>
-        <img src="static/assets/images/Código de image processing.png" class="img-responsive" alt="">
+        <img src="static/assets/images/code_image_processing.png" class="img-responsive" alt="">
       </div>
 
     </div>
