--- a/templates/work2.html
+++ b/templates/work2.html
@@ -85,7 +85,7 @@
                  class="img-responsive" alt="PDF dummy">
           </div>
           <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/tilt pdf.png"
+            <img src="static/assets/images/tilt_pdf.png"
                  class="img-responsive" alt="PDF tilt">
           </div>
           <div class="col-xs-12 col-md-4">
@@ -100,7 +100,7 @@
       </div>
           <div class="row" style="margin-top: 30px;">
             <div class="col-xs-12 col-md-12">
-              <img src="static/assets/images/super pdf.png"
+              <img src="static/assets/images/super_pdf.png"
                   class="img-responsive" alt="PDFs juntos">
               <blockquote>
                 <p class="text-center">PDFs juntos</p>
@@ -128,7 +128,7 @@
         </blockquote>
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_watermarker.png" 
+            <img src="static/assets/images/code_watermarker.png" 
                 class="img-responsive" alt="Código Watermarker">
             <blockquote>
               <p>Código para la marca de agua</p>
@@ -136,7 +136,7 @@
           </div>
 
           <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_pdf_merger.png" 
+            <img src="static/assets/images/code_pdf_merger.png" 
                class="img-responsive" alt="Código PDF Merger">
             <blockquote>
               <p>Código para juntar los PDFs</p>
