--- a/templates/work3.html
+++ b/templates/work3.html
@@ -63,15 +63,15 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="static/assets/images/acrobat.png" class="hero-img" alt="">>
+        <img src="static/assets/images/email_with_python.jpg" class="hero-img" alt="">>
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : Procesamiento y manipulación de PDFs con Python</h1>
+            <h1 class="h2">003 : Envío de Emails con Python</h1>
           </div>
-          <p>Este proyecto utiliza Python para automatizar el trabajo con documentos PDF. Aprendí a combinar varios archivos en un solo documento, agregar marcas de agua y trabajar página por página usando la librería pypdf.</p>
+          <p>El proyecto utiliza el módulo smtplib y EmailMessage para conectarse a un servidor SMTP y enviar correos electrónicos usando Python. Además, integré plantillas HTML con placeholders para incluir nombres, mensajes personalizados y contenido dinámico. Aprendí a establecer conexiones seguras con TLS, leer un archivo .html como base y reemplazar variables dentro del texto antes de enviarlo.</p>
 
           <blockquote>
-            <p>Usé la librería pypdf para combinar varios PDF en uno solo y agregar una marca de agua automáticamente a cada página.</p>
+            <p>Envié emails personalizados con contenido HTML y datos variables extraídos desde plantillas.</p>
           </blockquote>
         </div>
       </div>
@@ -79,47 +79,16 @@
       
       
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/dummy pdf.png"
-                 class="img-responsive" alt="PDF dummy">
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/tilt pdf.png"
-                 class="img-responsive" alt="PDF tilt">
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/twopage.png"
-                 class="img-responsive" alt="PDF twopage">
-          </div>
-          <div class="col-xs-12">
-            <blockquote>
-              <p class="text-center">PDFs separados</p>
-            </blockquote>
-          </div>
-      </div>
           <div class="row" style="margin-top: 30px;">
             <div class="col-xs-12 col-md-12">
-              <img src="static/assets/images/super pdf.png"
-                  class="img-responsive" alt="PDFs juntos">
-              <blockquote>
-                <p class="text-center">PDFs juntos</p>
-              </blockquote> 
-            </div>
-          </div>
-          <div class="row" style="margin-top: 30px;">
-            <div class="col-xs-12 col-md-12">
-              <img src="static/assets/images/watermarked_pdf.png"
+              <img src="static/assets/images/email.png"
                   class="img-responsive"
-                  alt="PDF con marca de agua">
+                  alt="Email enviado">
               <blockquote>
-                <p class="text-center">PDF con marca de agua</p>
+                <p class="text-center"></p>
               </blockquote>
             </div>
           </div>
-          </div>
-          </div>
-        </div>
       </div>
 
       <div class="col-xs-12">
@@ -127,19 +96,11 @@
           <p>Código usado:</p>
         </blockquote>
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_watermarker.png" 
-                class="img-responsive" alt="Código Watermarker">
+          <div class="col-xs-12">
+            <img src="static/assets/images/code_email_sender.png" 
+                class="img-responsive" alt="Código Email">
             <blockquote>
-              <p>Código para la marca de agua</p>
-            </blockquote>    
-          </div>
-
-          <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_pdf_merger.png" 
-               class="img-responsive" alt="Código PDF Merger">
-            <blockquote>
-              <p>Código para juntar los PDFs</p>
+              <p>Código para enviar emails</p>
             </blockquote>
           </div>
         </div>
