--- a/templates/works.html
+++ b/templates/works.html
@@ -73,32 +73,73 @@
                         <img src="static/assets/images/jpg_vs_png.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
+                        <h4>001/010</h4>
                         <h3>Procesamiento de imagenes con Python</h3>
-                        <p>La idea es crear un código que transforme imagenes ".jpg" a imagenes ".png".</p>
+                        <p>La idea fue crear un código que transforme imagenes ".jpg" a imagenes ".png".</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./work2.html" title="" class="black-image-project-hover">
                         <img src="static/assets/images/acrobat.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
+                        <h4>002/010</h4>
                         <h3>Procesamiento y manipulación de PDFs con Python</h3>
                         <p>Con Python aprendí a leer, unir y modificar archivos PDF de manera automatizada.</p>
                         <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <a href="./work3.html" title="" class="black-image-project-hover">
+                        <img src="static/assets/images/email_with_python.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
+                        <h4>003/010</h4>
+                        <h3>Envío de Emails con Python</h3>
+                        <p>Mandé correos electrónicos usando la librería de Python smtplib.</p>
+                        <a href="./work3.html" title="" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+                    
+               </div>
+                <!--/row-->
+            </div>
+            <!--/item-->
+            <div class="item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <a href="./work4.html" title="" class="black-image-project-hover">
+                      <img src="static/assets/images/password_checker.jpeg" alt="" class="img-responsive">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>004/010</h4>
+                      <h3>Password checker</h3>
+                      <p>Pude verificar contraseñas usando la API de Have I Been Pwned.</p>
+                      <a href="./work4.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                   <div class="col-sm-4">
+                      <a href="./work5.html" class="black-image-project-hover">
+                        <img src="static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h4>005/010</h4>
+                        <h3>Fringilla sit amet</h3>
+                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <a href="./work5.html" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+                    
+                    <div class="col-sm-4">
+                      <a href="./work6.html" class="black-image-project-hover">
+                        <img src="static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h4>006/010</h4>
                         <h3>Vivamus vestibulum</h3>
                         <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work6.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -109,44 +150,59 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+                    <a href="./work7.html" class="black-image-project-hover">
                       <img src="static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>004/006</h4>
+                      <h4>007/010</h4>
                       <h3>Nulla scelerisque</h3>
                       <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <a href="./work7.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
+                      <a href="./work8.html" class="black-image-project-hover">
                         <img src="static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
-                        <h4>005/006</h4>
+                        <h4>008/010</h4>
                         <h3>Fringilla sit amet</h3>
                         <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
+                        <a href="./work8.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
                     <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
+                      <a href="./work9.html" class="black-image-project-hover">
                         <img src="static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
-                        <h4>006/006</h4>
+                        <h4>009/010</h4>
                         <h3>Vivamus vestibulum</h3>
                         <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
+                        <a href="./work9.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
-                    
                 </div>
                 <!--/row-->
             </div>
-            
+            <!--/item-->
+            <div class="item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <a href="./work10.html" class="black-image-project-hover">
+                      <img src="static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="card-container">
+                      <h4>010/010</h4>
+                      <h3>Nulla scelerisque</h3>
+                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <a href="./work10.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                </div>
+                <!--/row-->
+            </div>
             <!--/item-->
         </div>
         <!--/carousel-inner--> 
