--- a/templates/work4.html
+++ b/templates/work4.html
@@ -63,15 +63,14 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="static/assets/images/acrobat.png" class="hero-img" alt="">>
+        <img src="static/assets/images/password_checker.jpeg" class="hero-img" alt="">>
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : Procesamiento y manipulación de PDFs con Python</h1>
+            <h1 class="h2">004 : Password checker</h1>
           </div>
-          <p>Este proyecto utiliza Python para automatizar el trabajo con documentos PDF. Aprendí a combinar varios archivos en un solo documento, agregar marcas de agua y trabajar página por página usando la librería pypdf.</p>
-
+          <p>En este proyecto implementé un script que encripta la contraseña usando SHA-1 (para no exponerla) y usa una API real para comprobar si una contraseña ha sido filtrada en hacks o bases de datos robadas.</p>
           <blockquote>
-            <p>Usé la librería pypdf para combinar varios PDF en uno solo y agregar una marca de agua automáticamente a cada página.</p>
+            <p>Usé Python para verificar cuántas veces una contraseña apareció en filtraciones de datos usando la API de la página Have I Been Pwned.</p>
           </blockquote>
         </div>
       </div>
@@ -80,44 +79,12 @@
       
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/dummy pdf.png"
-                 class="img-responsive" alt="PDF dummy">
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/tilt pdf.png"
-                 class="img-responsive" alt="PDF tilt">
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <img src="static/assets/images/twopage.png"
-                 class="img-responsive" alt="PDF twopage">
-          </div>
           <div class="col-xs-12">
+            <img src="static/assets/images/verified_password.png"
+                 class="img-responsive" alt="PDF dummy">
             <blockquote>
-              <p class="text-center">PDFs separados</p>
-            </blockquote>
-          </div>
-      </div>
-          <div class="row" style="margin-top: 30px;">
-            <div class="col-xs-12 col-md-12">
-              <img src="static/assets/images/super pdf.png"
-                  class="img-responsive" alt="PDFs juntos">
-              <blockquote>
-                <p class="text-center">PDFs juntos</p>
-              </blockquote> 
-            </div>
-          </div>
-          <div class="row" style="margin-top: 30px;">
-            <div class="col-xs-12 col-md-12">
-              <img src="static/assets/images/watermarked_pdf.png"
-                  class="img-responsive"
-                  alt="PDF con marca de agua">
-              <blockquote>
-                <p class="text-center">PDF con marca de agua</p>
-              </blockquote>
-            </div>
-          </div>
-          </div>
+                <p class="text-center"></p>
+            </blockquote> 
           </div>
         </div>
       </div>
@@ -127,20 +94,12 @@
           <p>Código usado:</p>
         </blockquote>
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_watermarker.png" 
-                class="img-responsive" alt="Código Watermarker">
+          <div class="col-xs-12">
+            <img src="static/assets/images/code_password_checker.png" 
+                class="img-responsive" alt="Código Password Checker">
             <blockquote>
-              <p>Código para la marca de agua</p>
+              <p></p>
             </blockquote>    
-          </div>
-
-          <div class="col-xs-12 col-md-6">
-            <img src="static/assets/images/código_pdf_merger.png" 
-               class="img-responsive" alt="Código PDF Merger">
-            <blockquote>
-              <p>Código para juntar los PDFs</p>
-            </blockquote>
           </div>
         </div>
       </div>
